--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,6 +9,12 @@
   <link rel="stylesheet" href="{{ $style.RelPermalink }}">
 
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+
+<meta name="description" content="요리사, 배달 기사, 요양보호사 등 반복 작업으로 허리와 하체 부담이 큰 직종을 위한 착용형 근골격계 보조 수트. 작업 중 허리 부담을 줄이고 올바른 자세를 유지하도록 돕습니다.">
+<meta name="keywords" content="근골격계 보조 수트, 작업 보조 수트, 허리 보조, 요리사 허리 보호, 배달기사 허리 통증, 요양보호사 허리 보호, 산업용 보조 수트, 작업복형 보조장치, 허리 보호 작업복, 근골격계 예방">
+<meta name="robots" content="index,follow">
+<meta name="author" content="NextWork Lab">
+
 </head>
 <body>
   <div class="shell">
